--- a/application/templates/error.html
+++ b/application/templates/error.html
@@ -6,5 +6,6 @@
 <body>
     <h1>Error</h1>
     <p>Sorry, an error has occurred. Please try again later.</p>
+    <a href="/">Back to Submission Page</a>
 </body>
 </html>
